# warp-energy-manager-bricklet

./: .gitignore  README.rst  lfs_mount.sh  test.diff
hardware/: warp-energy-manager.kicad_pcb  warp-energy-manager.kicad_pro  warp-energy-manager.kicad_sch  warp-energy-manager.pro  warp-energy-manager.sch
software/: CMakeLists.txt  changelog
software/src/: cie1931.h  cie1931.py  communication.c  communication.h  data_storage.c  data_storage.h  date_time.c  date_time.h  eeprom.c  eeprom.h  io.c  io.h  led.c  led.h  lfs_config.h  main.c  modbus.c  modbus.h  relay.c  relay.h  rs485.c  rs485.h  sd.c  sd.h  sd_new_file_objects.c  sd_new_file_objects.h  sdm.c  sdm.h  sdm630.c  sdm630.h  sdmmc.c  sdmmc.h  timer.c  voltage.c  voltage.h
software/src/SDMMC_BLOCK/: sdmmc_block.c  sdmmc_block.h  sdmmc_block_conf.c  sdmmc_block_conf.h  sdmmc_block_extern.h
software/src/SPI_MASTER/: spi_master.c  spi_master.h  spi_master_conf.c  spi_master_conf.h  spi_master_extern.h
software/src/configs/: config.h  config_custom_bootloader.h  config_custom_bootstrapper.h  config_io.h  config_led.h  config_logging.h  config_relay.h  config_rs485.h  config_sdmmc.h  config_timer.h  config_voltage.h
software/src/fatfs/: diskio.h
software/src/fatfs/port/: diskio.c
software/src/littlefs/: lfs.c  lfs_util.h
tester/: build_ui.py  date_time.py  get_uptime.py  read_em_daily.py  read_wb_daily.py  sd_format.py  sd_get_info.py  sd_read_parallel.py  sd_write.py  sd_write_read.py  sd_write_read_all.py  sd_write_read_wb_daily.py  sdm_simulator.py  set_led.py  test_get_set.py  test_storage.py  warp_charger_simulator.py  warp_energy_manager_tester.py
tester/tinkerforge/: bricklet_industrial_digital_in_4_v2.py  bricklet_industrial_quad_relay_v2.py  bricklet_rs485.py  bricklet_warp_energy_manager.py  device_display_names.py  device_factory.py  device_factory_all.py
tester/ui/: mainwindow.ui
